--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#others">AWARDS</a>
+                    </li>
 
                 </ul>
             </div>
@@ -158,6 +161,18 @@
         </div>
     </section>
     <!-- Awards -->
+
+    <!-- Others -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="others">
+        <div class="container px-5">
+            <header>
+                <h2 id="others-subtitle"><i class="bi bi-award-fill"></i>OTHERS </h2>
+            </header>
+            <div class="main-body" id="others-md"></div>
+
+        </div>
+    </section>
+    <!-- Others -->
 
 
     <!-- Footer-->
