--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#others">AWARDS</a>
+                        <a class="nav-link me-lg-3" href="#others">OTHERS</a>
                     </li>
 
                 </ul>
@@ -142,7 +142,7 @@
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
         <div class="container px-5">
             <header>
-                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PUBLICATIONS</h2>
+                <h2 id="publications-subtitle"></i>发表&nbsp;|&nbsp;PUBLICATIONS</h2>
             </header>
             <div class="main-body" id="publications-md"></div>
 
@@ -154,7 +154,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
         <div class="container px-5">
             <header>
-                <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>AWARDS </h2>
+                <h2 id="awards-subtitle"></i>获奖&nbsp;|&nbsp;AWARDS</h2>
             </header>
             <div class="main-body" id="awards-md"></div>
 
@@ -163,10 +163,10 @@
     <!-- Awards -->
 
     <!-- Others -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="others">
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="others">
         <div class="container px-5">
             <header>
-                <h2 id="others-subtitle"><i class="bi bi-award-fill"></i>OTHERS </h2>
+                <h2 id="others-subtitle"></i>其他&nbsp;|&nbsp;OTHERS</h2>
             </header>
             <div class="main-body" id="others-md"></div>
 
