--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
         <div class="container px-5">
             <header>
-                <h2 id="publications-subtitle"></i>发表&nbsp;|&nbsp;PUBLICATIONS</h2>
+                <h2 id="publications-subtitle"></i>发表&ensp;|&ensp;Publications</h2>
             </header>
             <div class="main-body" id="publications-md"></div>
 
@@ -154,7 +154,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
         <div class="container px-5">
             <header>
-                <h2 id="awards-subtitle"></i>获奖&nbsp;|&nbsp;AWARDS</h2>
+                <h2 id="awards-subtitle"></i>获奖&ensp;|&ensp;Awards</h2>
             </header>
             <div class="main-body" id="awards-md"></div>
 
@@ -166,7 +166,7 @@
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="others">
         <div class="container px-5">
             <header>
-                <h2 id="others-subtitle"></i>其他&nbsp;|&nbsp;OTHERS</h2>
+                <h2 id="others-subtitle"></i>其他&ensp;|&ensp;Others</h2>
             </header>
             <div class="main-body" id="others-md"></div>
 
