--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <div id="copyright-text" class="mb-2"></div>
                 <a id="github-link" href="https://github.com/Nirgal-Li">Github</a>
                 <span class="mx-1">&middot;</span>
-                <a id="license-link" href="https://github.com/Nirgal-Li/Nirgal-Li.github.io/blob/main/LICENSE">License</a>
+                <a id="license-link" href="https://github.com/senli1073/senli1073.github.io/blob/main/LICENSE">License</a>
             </div>
         </div>
     </footer>
